--- a/.posthtmlrc
+++ b/.posthtmlrc
@@ -25,7 +25,7 @@
           },
           {
             "type": "text",
-            "value": "The educational and pandemic-related inequities in West Harlem schools persist, even among institutions that have not lost students. David Fanning, principal of District 6’s A. Philip Randolph High School, has seen the ways in which online schooling has disproportionately harmed students with greater economic need. According to Fanning, online learning works best for those who thrive in traditional academic environments and or students whose families have the resources to consistently support and monitor them."
+            "value": "The educational and pandemic-related inequities in West Harlem schools persist, even among institutions that have not lost students. David Fanning, principal of District 6’s A. Philip Randolph Campus High School, has seen the ways in which online schooling has disproportionately harmed students with greater economic need. According to Fanning, online learning works best for those who thrive in traditional academic environments and or students whose families have the resources to consistently support and monitor them."
           },
           {
             "type": "text",
